CAMBIOS IMG BIENVENIDA
SE AGREGO EL TEXTO A LA IMAGEN

--- a/ladinpage.html
+++ b/ladinpage.html
@@ -27,9 +27,9 @@
 	</header>
     <!----imagen bienvenida--->
         <div class="container"><caption>
-    <img class="containerimg" src="Imagén_Bienvenida.png" alt="Snow" style="width:100%">
+    <img class="containerimg" src="Imagén_Bienvenida.png" alt="Snow" style="width:100%" class="image">
             <!---texto dentro de imagen-->
-    <center><h1 class="text1" style="color: #0f0101;">"VIVE EL SALVADOR COMO NUNCA ANTES"</h1></center>
+    <center><h1 class="text1" style="color: #fff;">"VIVE EL SALVADOR COMO NUNCA ANTES"</h1></center>
             <!--slogan-->
     <center> <h2 class="text2"> Explora y Accede a Nuestras Experiencias Únicas</h2></center>
     <!---boton en imagen--->
